--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
 		"build:ui": "rm -rf build && cd ../fso-frontend/ && npm run build && cp -r build ../fso-backend",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
-		"logs:prod": "fly logs"
+		"logs:prod": "fly logs",
+		"lint": "eslint ."
 	},
 	"author": "Conner Berg",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"mongoose": "^7.0.3"
 	},
 	"devDependencies": {
+		"eslint": "^8.38.0",
+		"eslint-plugin-react": "^7.32.2",
 		"nodemon": "^2.0.20"
 	}
 }
