--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon index.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --verbose",
 		"build:ui": "rm -rf build && cd ../fso-frontend/ && npm run build && cp -r build ../fso-backend",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
@@ -19,11 +19,16 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"mongodb": "4.1",
 		"mongoose": "^7.0.3"
 	},
 	"devDependencies": {
 		"eslint": "^8.38.0",
 		"eslint-plugin-react": "^7.32.2",
+		"jest": "^29.5.0",
 		"nodemon": "^2.0.20"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
