--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
-		"test": "jest --verbose",
+		"start": "NODE_ENV=production node index.js",
+		"dev": "NODE_ENV=development nodemon index.js",
+		"test": "NODE_ENV=test jest --verbose --runInBand",
 		"build:ui": "rm -rf build && cd ../fso-frontend/ && npm run build && cp -r build ../fso-backend",
 		"deploy": "fly deploy",
 		"deploy:full": "npm run build:ui && npm run deploy",
@@ -26,7 +26,8 @@
 		"eslint": "^8.38.0",
 		"eslint-plugin-react": "^7.32.2",
 		"jest": "^29.5.0",
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"supertest": "^6.3.3"
 	},
 	"jest": {
 		"testEnvironment": "node"
